2012-05-23  Kai Tietz  <kietz@redhat.com>

	* lib32/msvcr*.def: Define log/logf imports as DATA.
	* lib64/msvcr*.def: Likewise.

	* lib32/msvcr*.def: Make exp/expf functions defined as DATA.
	* lib64/msvcr*.def: Likewise.

	* lib32/msvcr*.def: Make sqrt/sqrtf functions defined as DATA.
	* lib64/msvcr*.def: Likewise.

	* math/ceilf.S: Removed.
	* math/ceil.S: New code.
	* Makefile.am: Added ceil.S to build.
	* Makefile.in: Regenerated.
	* lib32/msvcr*.def: Mark ceilf and ceil as DATA.
	* lib64/msvcr*.def: Likewise.

2012-05-23  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/cabinet.def: New def, based on a patch by Ray Donnelly.
	* Makefile.am (lib32_DATA): Add lib32/cabinet.def to build.
	* Makefile.in: Regenerate.

2012-05-22  Kai Tietz  <ktietz@redhat.com>

	* crt/crtexe.c (__mingw_winmain_hInstance): Initialize for
	console-mode, too.

2012-05-02  Kai Tietz  <ktietz@redhat.com>

	PR 3521401
	* gdtoa/strtodnrp.c (__strtod): Add Int_max initializer to fpi.
	* gdtoa/strtof.c (__strtof): Add Int_max initializer to fpi0.
	* gdtoa/strtopx.c (__strtopx): Add Int_max initializer to fpi0.

	* Makefile.in: Regenerated.
	* Makefile.am: Add RtlSecureZeroMemory.c file.
	* intrincs/RtlSecureZeroMemory.c: New file.

2012-04-19  Kai Tietz  <ktietz@redhat.com>
	    Timo Kreuzer <timo.kreuzer@reactos.org>

	* crt/cinitexe.c: Allow compilation with msvc.
	* crt/crt_handler.c: Likewise.
	* crt/crtexe.c: Likewise.
	* crt/gs_support.c: Likewise.
	* crt/merr.c: Likewise.
	* crt/pseudo-reloc.c: Likewise.

2012-02-26  Jonathan Yong  <jon_y@users.sourceforge.net>

	* lib32/msvcrt.def (_ftime_s): Add alias to _ftime32_s.
	* lib64/msvcrt.def (_ftime_s): Add alias to _ftime64_s.

2012-02-07  Rafaël Carré  <funman@videolan.org>

	* libsrc/dxva-uuid.c (New file): Add DXVA UUIDs

2012-02-03  Rafaël Carré  <funman@videolan.org>

	* libsrc/shell32.c (ApplicationAssociationRegistrationUI): Add UUIDs

2012-02-02  Rafaël Carré  <funman@videolan.org>

	* libsrc/strmiids.c (MEDIASUBTYPE_I420): Add GUID.
